Renamed project to 'snet' Dropped j2objc support Refactoring and cleanup

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">TSHttp example</string>
+    <string name="app_name">SNet Example</string>
     <string name="hello_world">Hello world!</string>
 </resources>
